# ai_coach

./: .env.example  .gitignore  Dockerfile  README.md  SESSION_SUMMARY_2026-04-29.md  SESSION_SUMMARY_2026-04-30.md  me.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/connectors/: garmin.py  strava.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: api.py
backend/app/services/: activity_dedupe.py  analytics.py  athlete_context.py  chatgpt_sync.py  coach.py  garmin_files.py  imports.py  metrics.py  ollama.py  recommendations.py  state_export.py
backend/tests/: test_activity_dedupe.py  test_analytics.py  test_chatgpt_actions.py  test_coach_behavior.py  test_imports.py  test_metrics.py  test_recommendations.py  test_state_export.py
docs/: chatgpt-actions.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
scripts/: chatgpt_smoke_test.sh  start_app.sh  stop_app.sh
