[project]
name = "ai-coach"
version = "0.1.0"
description = "Local-first AI triathlon coach with Strava/Garmin ingestion, manual metrics, calendar planning, and Ollama coaching."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "fitdecode>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
